# ghc-t16935

./: README.md  cabal.project
app/: app.cabal
app/src/: App.hs
lib/: lib.cabal
lib-core/: CHANGELOG.md  lib-core.cabal
lib-core/src/: Lib.hs
lib/src/: Lib.hs
lib/src/Lib/: Internal.hs
