cabal-version:       >=1.10
name:                app
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     App
  build-depends:       base >= 4 && < 5, lib
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable app
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5, app
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall
