cabal-version:       >=1.10
name:                lib
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Lib
  other-modules:       Lib.Internal
  build-depends:       base >= 4 && < 5, lib-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
